--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -72,7 +72,7 @@ Harassment or discrimination based on age, ancestry, color, gender identity or e
 ​</p>
 <p>We encourage everyone to assist in creating a welcoming and safe environment. Please report any concerns, harassing behavior, or suspicious or disruptive activity to venue staff, the event host or owner, or the nearest event staff.</p>
 <p>The Memphis Python User Group reserves the right to refuse admittance to or remove any person from an event at any time at its sole discretion.</p>
-<p>Please use this form to report concerns with this Code of Conduct.</p>
+<p>Please use this <a href="https://forms.gle/XSJAHKppscC5GGjx6">form</a> to report concerns with this Code of Conduct.</p>
 
 
   <br><hr>
