Changed date string

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <h3 class="card__title">
         <a href="/posts/2023-june/">June 2023</a>
       </h3>
-      <p class="card__date">19 Jun, 2023</p>
+      <p class="card__date">Jun 19, 2023</p>
       <p class="card__description">Databases with Python 3</p>
       <p class="card__subtitle">Tags:</p>
       <div class="card__tags">
@@ -133,7 +133,7 @@
       <h3 class="card__title">
         <a href="/posts/2023-may/">May 2023</a>
       </h3>
-      <p class="card__date">15 May, 2023</p>
+      <p class="card__date">May 15, 2023</p>
       <p class="card__description">Exploratory Data Analysis with Pandas and Plotly - Matt Eland</p>
       <p class="card__subtitle">Tags:</p>
       <div class="card__tags">
